Plenty refactoring done. Added update and delete functionality.