@@ -1,12 +1,12 @@
 package hr.scorpiusmobile.recipes.controllers;
 
+import hr.scorpiusmobile.recipes.commands.RecipeCommand;
 import hr.scorpiusmobile.recipes.domain.Recipe;
 import hr.scorpiusmobile.recipes.services.RecipeService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.*;
 
 @Controller
 @Slf4j
@@ -18,26 +18,41 @@ public class RecipeController {
         this.recipeService = recipeService;
     }
 
-    @RequestMapping("/recipe/show/{id}")
-    public String showById(@PathVariable String id, Model model){
+    @GetMapping
+    @RequestMapping("/recipe/{id}/show")
+    public String showById(@PathVariable String id, Model model) {
 
-        Recipe recipe =  (Recipe)recipeService.findById(new Long(id));
-        model.addAttribute("recipe", recipe);
-        model.addAttribute("prepTime", recipe.getPrepTime() );
-        model.addAttribute("cookTime", recipe.getCookTime() );
-        model.addAttribute("categories", recipe.getCategories());
-        model.addAttribute("serving", recipe.getServing());
-        model.addAttribute("source", recipe.getSource() );
-        model.addAttribute("url", recipe.getUrl() );
+        Long idLong = Long.valueOf(id);
+        model.addAttribute(recipeService.findById(idLong));
 
-        log.debug("Recipe controller mapped");
+        // log.debug("Recipe controller mapped");
         return "recipe/show";
     }
+    @GetMapping
     @RequestMapping("/recipe/new")
-    public String newRecipe (Model model){
+    public String newRecipe(Model model) {
 
-        Recipe recipe = new Recipe();
-        model.addAttribute(recipe);
+        model.addAttribute("recipe", new RecipeCommand());
         return "recipe/recipeform";
+    }
+
+    @PostMapping
+    @RequestMapping("recipe")
+    public String saveOrUpdate(@ModelAttribute RecipeCommand command) {
+
+        RecipeCommand savedCommand = recipeService.saveRecipeCommand(command);
+        return "redirect:/recipe/" + savedCommand.getId() + "/show";
+    }
+    @GetMapping
+    @RequestMapping("/recipe/{id}/update")
+    public String updateRecipe(@PathVariable String id, Model model) {
+        model.addAttribute("recipe", recipeService.findCommandById(Long.valueOf(id)));
+        return "recipe/recipeform";
+    }
+    @GetMapping
+    @RequestMapping("/recipe/{id}/delete")
+    public String deleteRecipe(@PathVariable String id) {
+       recipeService.deleteById(Long.valueOf(id));
+        return "redirect:/";
     }
 }
